# arcman

./: .gitignore  CMakeLists.txt  README.md  install.bat  makefile
doc/: UML_diagram.puml  code_doc.md  compilation.md  motivation.md
src/: backpack.cpp  backpack.h  global.cpp  global.h  global.hpp  hero.cpp  hero.h  i_object.h  main.cpp  necromancer.cpp  necromancer.h  potion.cpp  potion.h  shield.cpp  shield.h  sword.cpp  sword.h  warrior.cpp  warrior.h  wizard.cpp  wizard.h
src/entity/: entity.cpp  entity.h  entity.hpp  ghost.cpp  ghost.hpp  moving_entity.cpp  moving_entity.h  player.cpp  player.h  player.hpp  static_entity.h  tile.cpp  tile.h
src/entity/moving/: ghost.cpp  ghost.hpp  moving_entity.cpp  moving_entity.hpp  player.cpp  player.hpp
src/entity/static/: big_pellet.cpp  big_pellet.hpp  small_pellet.cpp  small_pellet.hpp  static_entity.cpp  static_entity.hpp
src/exception/: custom_exception.h  custom_exception.hpp
src/logger/: logger.cpp  logger.hpp
src/node/: node.cpp  node.hpp
src/static/: game.cpp  game.h  game.hpp  game_main.cpp  game_nodeinit.cpp  game_nodes.cpp
